Fix editor-view overflow-scroll when content is not overflowing

--- a/src/app/components/editor-view/editor-view.component.scss
+++ b/src/app/components/editor-view/editor-view.component.scss
@@ -1,5 +1,5 @@
 :host {
-  height: 100%;
+  height: auto;
   overflow-y: scroll;
   &:hover::-webkit-scrollbar-thumb {
     visibility: visible;
