--- a/src/styles.scss
+++ b/src/styles.scss
@@ -180,7 +180,6 @@ body .p-tree,
 }
 
 body .editor-view {
-  height: 100%;
   width: 100%;
   background: var(--primary);
   border-left: $app-border;
